--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">О себе</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Опыт работы</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Образование</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Навыки</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Интересы</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Награды</a></li>
                 </ul>
             </div>
         </nav>
@@ -40,14 +40,14 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Иван
-                        <span class="text-primary">сидоров</span>
+                        Софья
+                        <span class="text-primary">Касаткина</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        г.Москва, 8 (926) 181 - 81 - 28 ·
+                        <a href="mailto:name@email.com">kasatkina.sa08@mail.ru</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5"> Маркетолог с сильными дизайнерскими навыками. Способна самостоятельно воплощать рекламные концепции в готовые визуальные решения — от прототипирования в Figma до финальной графики в Adobe. Учавствовала в Чемпионате молодых лидеров креативных индустрий "ДЕБЮТ", при поддержке "Росмолодежь. Гранты". Умею не только придумывать рекламные концепции, но и самостоятельно воплощать их в качественные макеты. Нацелена на развитие в области digital-маркетинга и создание эффективных коммуникаций, основанных на понимании UX/UI. .</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -60,28 +60,25 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Опыт работы</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Участник Большого события Яндекс Рекламы «REKONFA Live»</h3>
+                            <p>Реализация «от идеи до запуска проектов», повышение эффективности от партнерства, новые маркентинговые стратегии.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Октябрь 2025</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Участник выставки «Реклама» в Экспоцентре</h3>
+                            <p> Знакомство и погружение в рекламное производство </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"> 21-24 Октября 2025 </span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0"> Участник Чемпионата молодых лидеров креативных индустрий "ДЕБЮТ" </h3>
+                            <p> Приняла вызов в соревновательной среде, требующей быстрой интеграции в новую команду, распределения ролей и совместной генерации идей. Проявила лидерские качества, взяв на себя фасилитацию мозговых штурмов и координацию работы над дизайн-составляющей проекта. На практике освоила методологию быстрого прототипирования и презентации идей, что является ключевым навыком в современном маркетинге и дизайне.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
                     </div>
@@ -99,23 +96,23 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h2 class="mb-5">Образование</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Государственное бюджетное профессиональное образовательное учреждение города Москвы «Московский издательско-полиграфический колледж имени Ивана Фёдорова</h3>
+                            <div class="subheading mb-3">Профессиональне обучение </div>
+                            <div>Фотограф</div>
+                            <p>GPA: 5.00 </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Ноябрь 2023 - Апрель 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Среднее Профессиональное Обучение</h3>
+                            <div class="subheading mb-3">Реклама</div>
+                            <p>GPA: 4.78</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Сентябрь 2024 - Июль 2027</span></div>
                     </div>
                 </div>
             </section>
@@ -123,8 +120,8 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <h2 class="mb-5">Навки</h2>
+                    <div class="subheading mb-3">Инструменты</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
@@ -139,23 +136,23 @@
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Рабочий процесс</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Создание прототипов и дизайн интерфейсов (Figma)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Визуальный маркетинг и дизайн креативов 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            Работа с дизайн-системами и бренд-гайдлайнами
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Организация дизайн-процессов для маркетинговых задач
                         </li>
                     </ul>
                 </div>
@@ -164,55 +161,32 @@
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <h2 class="mb-5">Интересы</h2>
+                    <p>Помимо разработки дизайна и маркетинговых стратегий, я увлекаюсь выпечкой на дому, частыми долгими прогулками на свежем воздухе и готовкой необычной еды.</p>
+                    <p class="mb-0">Если выйти на улицу пргуляться не выходит, предпочту приготовить вкусногстей и посмотреть лбимый сериал или фильм. Также в свободное время могу заняться изучением темы которая мне непонятна или интересной новой.</p>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Награды и сертификаты</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            Сертификат об окончания обучения по проекту "Математическая вертикаль" 7-9 класс
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            Сертификат призера Чемпионата молодых лидеров креативных индустрий "ДЕБЮТ" при поддержке "Росмолодежь. Гранты"
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+                            Свидетельство о получени квалификации по профессии "Фотограф"
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
                     </ul>
                 </div>
             </section>
