--- a/index.html
+++ b/index.html
@@ -80,15 +80,8 @@
                             <h3 class="mb-0"> Участник Чемпионата молодых лидеров креативных индустрий "ДЕБЮТ" </h3>
                             <p> Приняла вызов в соревновательной среде, требующей быстрой интеграции в новую команду, распределения ролей и совместной генерации идей. Проявила лидерские качества, взяв на себя фасилитацию мозговых штурмов и координацию работы над дизайн-составляющей проекта. На практике освоила методологию быстрого прототипирования и презентации идей, что является ключевым навыком в современном маркетинге и дизайне.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">11-12 Ноября 2024</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
                 </div>
             </section>
