--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Навки</h2>
+                    <h2 class="mb-5">Навыки</h2>
                     <div class="subheading mb-3">Инструменты</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
